--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -79,26 +79,26 @@
       </div>
 
       <%# --- 🏠 Dans ma cave --- %>
-      <% my_cellar = @meal.meal_drinks.joins(drink: :stocks).where(status: "recommendation", stocks: { user_id: current_user.id }) %>
-      <% if my_cellar.any? %>
+      <%# <% my_cellar = @meal.meal_drinks.joins(drink: :stocks).where(status: "recommendation", stocks: { user_id: current_user.id }) %>
+      <% if @my_cellar.any? %>
         <h4>Dans ma cave</h4>
         <div class="cards">
-          <% my_cellar.each do |meal_drink| %>
+          <% @my_cellar.each do |drink| %>
             <label class="td-wine-card w-100 drink-selectable"
                    data-meal-selection-target="drinkCard"
                    data-action="click->meal-selection#toggleSelection">
 
-              <%= check_box_tag "selected_meal_drink_ids[]", meal_drink.id, false,
+              <%= check_box_tag "selected_meal_drink_ids[]", drink.id, false,
                   class: "drink-checkbox",
                   data: { meal_selection_target: "checkbox" } %>
 
               <div class="td-wine-card-image">
                 <div class="td-wine-placeholder">
-                  <%= image_tag(meal_drink.drink.photo, class: "stock-image-container", alt: "#{meal_drink.drink.title}") %>
+                  <%= image_tag(drink.photo, class: "stock-image-container", alt: "#{drink.title}") %>
                 </div>
               </div>
               <div class="td-wine-card-content">
-                <span class="stock-title"><%= meal_drink.drink.title %></span>
+                <span class="stock-title"><%= drink.title %></span>
               </div>
             </label>
           <% end %>
@@ -106,26 +106,26 @@
       <% end %>
 
       <%# --- 🍷 Vins --- %>
-      <% wines = @meal.meal_drinks.joins(:drink).where(status: "recommendation", drinks: { category: "Vin" }) %>
-      <% if wines.any? %>
+      <%# <% wines = @meal.meal_drinks.joins(:drink).where(status: "recommendation", drinks: { category: "Vin" }) %>
+      <% if @drinks_wine.any? %>
         <h4>Vins</h4>
         <div class="cards">
-          <% wines.each do |meal_drink| %>
+          <% @drinks_wine.each do |drink| %>
             <label class="td-wine-card w-100 drink-selectable"
                    data-meal-selection-target="drinkCard"
                    data-action="click->meal-selection#toggleSelection">
 
-              <%= check_box_tag "selected_meal_drink_ids[]", meal_drink.id, false,
+              <%= check_box_tag "selected_meal_drink_ids[]", drink.id, false,
                   class: "drink-checkbox",
                   data: { meal_selection_target: "checkbox" } %>
 
               <div class="td-wine-card-image">
                 <div class="td-wine-placeholder">
-                  <%= image_tag(meal_drink.drink.photo, class: "stock-image-container", alt: "#{meal_drink.drink.title}") %>
+                  <%= image_tag(drink.photo, class: "stock-image-container", alt: "#{drink.title}") %>
                 </div>
               </div>
               <div class="td-wine-card-content">
-                <span class="stock-title"><%= meal_drink.drink.title %></span>
+                <span class="stock-title"><%= drink.title %></span>
               </div>
             </label>
           <% end %>
@@ -133,26 +133,26 @@
       <% end %>
 
       <%# --- 🍸 Boissons alcoolisées --- %>
-      <% alcohol = @meal.meal_drinks.joins(:drink).where(status: "recommendation", drinks: { category: "Alcoolisée" }) %>
-      <% if alcohol.any? %>
+      <%# <% alcohol = @meal.meal_drinks.joins(:drink).where(status: "recommendation", drinks: { category: "Alcoolisée" }) %>
+      <% if @drinks_alcohol.any? %>
         <h4>Boissons alcoolisées</h4>
         <div class="cards">
-          <% alcohol.each do |meal_drink| %>
+          <% @drinks_alcohol.each do |drink| %>
             <label class="td-wine-card w-100 drink-selectable"
                    data-meal-selection-target="drinkCard"
                    data-action="click->meal-selection#toggleSelection">
 
-              <%= check_box_tag "selected_meal_drink_ids[]", meal_drink.id, false,
+              <%= check_box_tag "selected_meal_drink_ids[]", drink.id, false,
                   class: "drink-checkbox",
                   data: { meal_selection_target: "checkbox" } %>
 
               <div class="td-wine-card-image">
                 <div class="td-wine-placeholder">
-                  <%= image_tag(meal_drink.drink.photo, class: "stock-image-container", alt: "#{meal_drink.drink.title}") %>
+                  <%= image_tag(drink.photo, class: "stock-image-container", alt: "#{drink.title}") %>
                 </div>
               </div>
               <div class="td-wine-card-content">
-                <span class="stock-title"><%= meal_drink.drink.title %></span>
+                <span class="stock-title"><%= drink.title %></span>
               </div>
             </label>
           <% end %>
@@ -160,26 +160,26 @@
       <% end %>
 
       <%# --- 🥤 Boissons sans alcool --- %>
-      <% no_alcohol = @meal.meal_drinks.joins(:drink).where(status: "recommendation", drinks: { category: "Non alcoolisée" }) %>
-      <% if no_alcohol.any? %>
+      <%# <% no_alcohol = @meal.meal_drinks.joins(:drink).where(status: "recommendation", drinks: { category: "Non alcoolisée" }) %>
+      <% if @drinks_no_alcohol.any? %>
         <h4>Boissons sans alcool</h4>
         <div class="cards">
-          <% no_alcohol.each do |meal_drink| %>
+          <% @drinks_no_alcohol.each do |drink| %>
             <label class="td-wine-card w-100 drink-selectable"
                    data-meal-selection-target="drinkCard"
                    data-action="click->meal-selection#toggleSelection">
 
-              <%= check_box_tag "selected_meal_drink_ids[]", meal_drink.id, false,
+              <%= check_box_tag "selected_meal_drink_ids[]", drink.id, false,
                   class: "drink-checkbox",
                   data: { meal_selection_target: "checkbox" } %>
 
               <div class="td-wine-card-image">
                 <div class="td-wine-placeholder">
-                  <%= image_tag(meal_drink.drink.photo, class: "stock-image-container", alt: "#{meal_drink.drink.title}") %>
+                  <%= image_tag(drink.photo, class: "stock-image-container", alt: "#{drink.title}") %>
                 </div>
               </div>
               <div class="td-wine-card-content">
-                <span class="stock-title"><%= meal_drink.drink.title %></span>
+                <span class="stock-title"><%= drink.title %></span>
               </div>
             </label>
           <% end %>
@@ -187,26 +187,26 @@
       <% end %>
 
       <%# --- 🎲 Suggestions improbables --- %>
-      <% improbable = @meal.meal_drinks.joins(:drink).where(status: "recommendation", drinks: { category: "Improbable" }) %>
-      <% if improbable.any? %>
+      <%# <% improbable = @meal.meal_drinks.joins(:drink).where(status: "recommendation", drinks: { category: "Improbable" }) %>
+      <% if @drinks_impro.any? %>
         <h4>Suggestions improbables</h4>
         <div class="cards">
-          <% improbable.each do |meal_drink| %>
+          <% @drinks_impro.each do |drink| %>
             <label class="td-wine-card w-100 drink-selectable"
                    data-meal-selection-target="drinkCard"
                    data-action="click->meal-selection#toggleSelection">
 
-              <%= check_box_tag "selected_meal_drink_ids[]", meal_drink.id, false,
+              <%= check_box_tag "selected_meal_drink_ids[]", drink.id, false,
                   class: "drink-checkbox",
                   data: { meal_selection_target: "checkbox" } %>
 
               <div class="td-wine-card-image">
                 <div class="td-wine-placeholder">
-                  <%= image_tag(meal_drink.drink.photo, class: "stock-image-container", alt: "#{meal_drink.drink.title}") %>
+                  <%= image_tag(drink.photo, class: "stock-image-container", alt: "#{drink.title}") %>
                 </div>
               </div>
               <div class="td-wine-card-content">
-                <span class="stock-title"><%= meal_drink.drink.title %></span>
+                <span class="stock-title"><%= drink.title %></span>
               </div>
             </label>
           <% end %>
