seed, upcas, capitalized

--- a/app/assets/stylesheets/pages/_events.scss
+++ b/app/assets/stylesheets/pages/_events.scss
@@ -354,10 +354,10 @@
 }
 
 .td-guest-avatar-inline {
-  width: 32px;
-  height: 32px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
-  border: 2px solid $dark-bg;
+  border: 2px solid $gold;
   overflow: hidden;
   display: flex;
   align-items: center;
