modif add bottle

--- a/app/assets/stylesheets/components/layout.scss
+++ b/app/assets/stylesheets/components/layout.scss
@@ -209,7 +209,7 @@ a {
 // === INPUTS ===
 .form-control, .form-select {
   background: $dark-bg-card;
-  border: 1px solid rgba($text-muted, 0.3);
+  border: 1px solid #252525;
   color: $text-primary;
   border-radius: 12px;
   padding: 12px 16px;
